fixed header logo appearing to large on small screens

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -139,12 +139,12 @@ li a:hover {
  }
  .page-header__logo {
    max-width: 100%;
-   max-height: 75px;
+   max-height: 95%;
    padding:0;
    margin: 0;
  }
  .navigation-list__item {
-   display:inline-block;
+   display: block;
    float:left;
    font-size: 55%;
    padding:0;
@@ -484,7 +484,7 @@ input[type=tel] {
 .button {
   /* overwrites browser defaults and resets the border */
   border: none;
-  display: inline-block;
+  display: block;
   float:left;
   /* takes the font from the outer container */
   font-family: inherit;
